--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,12 +1,20 @@
 body {
-    background-color: rgb(16, 7, 7)
+    background-color: rgb(16, 7, 7);
 }
 
 main {
-    max-width:530px;
+    max-width: 100vw;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* Media query for larger devices (desktops) */
+@media (min-width: 531px) {
+    main {
+        max-width: 80vw;
+    }
 }
 
 .container {
@@ -21,6 +29,7 @@ main {
     background-color: #121212;
     padding: 20px;
     border-radius: 10px;
+    animation: fadeInRight 0.5s ease-out forwards;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -122,30 +131,45 @@ hr {
     background: #333;
 }
 
-.map-container .us-map {
-    width: 100%;
-    height: auto;
+.css-circle {
+    display: inline-block;
+    width: 18px; /* Circle size */
+    transition: background-color 0.5s ease;
+    height: 18px; /* Circle size */
+    border-radius: 50%; /* Makes the square a circle */
+    background-color: #fff; /* Circle color, change as needed */
+    opacity: 1; /* Adjust opacity as needed */
 }
 
-.map-container svg{
-    width: 100%;
-    height: auto;
+
+@keyframes fadeInRight {
+    from {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
-
-#FL,
-#GA,
-#AL {
-    opacity: 1; /* Full opacity */
+.my-background-circle {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color: #a34848;
+    transition: background-color 0.3s ease;
 }
 
-path {
-    fill: #a34848 !important; /* Default fill for other states */
-    opacity: 0.3;
+.active {
+    background-color: #f06868;
 }
 
-path:hover {
-    transform: scale(1.05);
-    transform-origin: center; /* Or specify x y coordinates like 50% 50% */
-    transition: transform 0.3s ease;
+.my-background-text {
+    color: #a34848;
+    transition: color 0.3s ease;
+}
+
+.item:hover .my-background-text, .item:hover .my-background-circle {
+    cursor: pointer;
 }
